# PigeonCoop

./: .gitignore  AGENTS.md  Cargo.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  workflow-00000000-0000-0000-0000-000000000001.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/bridge/: mod.rs
apps/desktop/src-tauri/src/commands/: mod.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: coordinator.rs  coordinator_tests.rs  lib.rs  validator_tests.rs
crates/core-engine/src/execution/: mod.rs
crates/core-engine/src/review/: mod.rs
crates/core-engine/src/scheduler/: mod.rs
crates/core-engine/src/state_machine/: mod.rs  node.rs
crates/core-engine/src/tests/: guardrails.rs  helpers.rs  mod.rs  node_transitions.rs  review.rs  routing.rs  run_transitions.rs  scheduler.rs  validation.rs
crates/core-engine/src/validation/: mod.rs
crates/event-model/: Cargo.toml
crates/event-model/src/: agent_events.rs  command_events.rs  event.rs  guardrail_events.rs  human_review_events.rs  lib.rs  memory_events.rs  node_events.rs  routing_events.rs  run_events.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 001_initial_schema.sql
crates/persistence/src/: lib.rs
crates/persistence/src/repositories/: events.rs  mod.rs  runs.rs  settings.rs  workflows.rs
crates/persistence/src/sqlite/: mod.rs
crates/persistence/src/tests/: events.rs  mod.rs  runs.rs  settings.rs  workflows.rs
crates/runtime-adapters/: Cargo.toml
crates/runtime-adapters/src/: agent.rs  lib.rs
crates/runtime-adapters/src/cli/: mod.rs
crates/runtime-adapters/src/mock/: mod.rs
crates/runtime-adapters/src/tests/: cli_adapter.rs  mock_adapter.rs  mod.rs
crates/runtime-adapters/src/tools/: mod.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: lib.rs
crates/workflow-model/: Cargo.toml
crates/workflow-model/src/: constraints.rs  edge.rs  lib.rs  memory.rs  node.rs  node_config.rs  run.rs  workflow.rs
distribution/aur/: .SRCINFO  PKGBUILD
distribution/homebrew/: agent-arcade.rb
distribution/winget/: AgentArcade.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN_SPEC.md  EVENT_SCHEMA.md  PRD.md  README.md  REPO_STRUCTURE.md  TAURI_IPC_CONTRACT.md  TESTING.md  VISUAL_IDENTITY.md  workboard.json  workboard.md  workboard.schema.json
examples/plan-execute-critique-approve/: README.md  workflow.json
schemas/: run-event.schema.json  workflow.schema.json
tests/e2e/: package-lock.json  package.json  wdio.conf.js
(+37 files in other folders)
