[workspace]
members = [
    "crates/workflow-model",
    "crates/event-model",
    "crates/core-engine",
    "crates/runtime-adapters",
    "crates/persistence",
    "crates/simulation",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
