[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
workflow-model = { path = "../workflow-model" }
event-model = { path = "../event-model" }
# SQLite driver added when implementing persistence layer
# rusqlite = { version = "0.31", features = ["bundled"] }
