[package]
name = "runtime-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
workflow-model = { path = "../workflow-model" }
event-model = { path = "../event-model" }
